--- a/docs/layouts/partials/header.html
+++ b/docs/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="ja" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#">
+<html lang="ja" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#">
 <head>
     <meta charset="utf-8">
 
