--- a/docs/layouts/partials/footer.html
+++ b/docs/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 <footer>
     <div>
         <p>
-            &copy; Atomic-package
+            &copy; Atomic Package
         </p>
     </div>
 </footer>
