--- a/scss/base/_setting.scss
+++ b/scss/base/_setting.scss
@@ -5,7 +5,7 @@ $experimental-support-for-microsoft: false;
 $experimental-support-for-opera: false;
 
 $baseWidth: 1000px;
-$baseBgColor: #eee;
+$baseBgColor: #fff;
 $imgPath: "../img/ui/";
 
 $colorAqua: #0ff;
