--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -2,6 +2,12 @@
 <section id="top">
     <div class="container">
 
+        <p class="btn primary"><a href="">button</a></p>
+        <p class="btn primary"><a href="">button</a></p>
+        <p class="btn primary"><a href="">button</a></p>
+        <p class="btn primary"><a href="">button</a></p>
+        <p class="btn primary"><a href="">button</a></p>
+
         <div id="primary" class="content-area">
             <div id="content" class="site-content" role="main">
 
