--- a/docs/public/css/atomic-pack.css
+++ b/docs/public/css/atomic-pack.css
@@ -68,7 +68,7 @@ input, select {
 body {
   margin: 0;
   padding: 0;
-  background: #fff;
+  background: #eee;
   font-size: 14px;
   text-align: left;
   font-family: arial, "Hiragino Kaku Gothic Pro", sans-serif;
