--- a/docs/static/css/atomic-package-theme/atomic-package-theme.css
+++ b/docs/static/css/atomic-package-theme/atomic-package-theme.css
@@ -4,9 +4,7 @@
 /*
  * Reset Style
 */
-html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, pre, address, em, img, small, strong, b, i,
-dl, dt, dd, ol, ul, li, form, label, table, caption, tbody, tfoot, thead, tr, th, td, article, canvas, footer,
-header, menu, nav, section, time, audio, video {
+html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strike, strong, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, menu, nav, output, ruby, section, summary, time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -20,12 +18,27 @@ body {
   line-height: 1;
 }
 
-article, footer, header, menu, nav, section {
+article, aside, details, figcaption, figure, footer, header, menu, nav, section {
   display: block;
 }
 
-ul {
+ol, ul {
   list-style: none;
+}
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 a {
