--- a/docs/layouts/partials/footer.html
+++ b/docs/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <footer>
-    <div>
-        <p>
+    <div class="wrap">
+        <p class="text copy">
             &copy; Atomic Package
         </p>
     </div>
