--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -2,11 +2,43 @@
 <section id="top">
     <div class="container">
 
+        <h2>ボタン</h2>
+        <p class="btn"><a href="">button</a></p>
         <p class="btn primary"><a href="">button</a></p>
+        <p class="btn green"><a href="">button</a></p>
+        <p class="btn orange"><a href="">button</a></p>
         <p class="btn primary"><a href="">button</a></p>
-        <p class="btn primary"><a href="">button</a></p>
-        <p class="btn primary"><a href="">button</a></p>
-        <p class="btn primary"><a href="">button</a></p>
+
+        <p class="btn primary"><button>ボタン</button></p>
+        <p class="btn primary"><input type="submit" value="ボタン"/></p>
+
+
+        <button class="btn primary">ボタン</button>
+        <input class="btn primary" type="submit" value="ボタン"/>
+
+
+        <h2>アイコン</h2>
+        <p class="icon"></p>
+        <p class="icon"></p>
+        <p class="icon"></p>
+        <p class="icon"></p>
+        <p class="icon"></p>
+        <p class="icon"></p>
+        <p class="icon"></p>
+        <p class="icon"></p>
+
+        <h2>テキスト</h2>
+        <p class="text">テキスト</p>
+        <p class="text"></p>
+        <p class="text"></p>
+        <p class="text"></p>
+        <p class="text"></p>
+        <p class="text"></p>
+
+        <h2>ボックス</h2>
+        <div class="box"></div>
+
+
 
         <div id="primary" class="content-area">
             <div id="content" class="site-content" role="main">
