--- a/docs/layouts/partials/head_includes.html
+++ b/docs/layouts/partials/head_includes.html
@@ -1,1 +1,1 @@
-<link href="./css/atomic-pack.min.css" rel="stylesheet" type="text/css" media="screen" />
+<link href="./css/atomic-package.min.css" rel="stylesheet" type="text/css" media="screen" />
