add atomic parts

--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -25,7 +25,9 @@
         <p class="icon"></p>
         <p class="icon"></p>
         <p class="icon"></p>
-        <p class="icon"></p>
+
+        <p class="icon batch"></p>
+
 
         <h2>テキスト</h2>
         <p class="text">テキスト</p>
@@ -33,12 +35,190 @@
         <p class="text"></p>
         <p class="text"></p>
         <p class="text"></p>
-        <p class="text"></p>
+        <p class="text copy"></p>
 
         <h2>ボックス</h2>
         <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
 
 
+        <div class="userBox">
+            <p class="thumbnail"><img src="" alt=""/></p>
+            <div class="details"></div>
+        </div>
+
+
+        <h2>フォーム</h2>
+        <p class="input"><input type="text" value="テキスト"/></p>
+        <p class="input"><input type="checkbox"/></p>
+        <p class="input"><input type="search"/></p>
+        <p class="input"><input type="radio"/></p>
+
+        <p class="input">
+            <select name="" id="">
+                <option value="">1</option>
+                <option value="">2</option>
+                <option value="">3</option>
+                <option value="">4</option>
+                <option value="">5</option>
+            </select>
+        </p>
+
+        <h2>リスト</h2>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
+
+
+        <ul class="list disc">
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+        <ul class="list circle">
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+        <ul class="list square">
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+        <ul class="list lowerRoman">
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+        <ul class="list upperRoman">
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+        <ul class="list lowerRoman">
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+        <ul class="list lowerGreek">
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+        <ul class="list decimal">
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+        <ul class="list decimalLeadingZero">
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+        <ul class="list lowerLatin">
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+        <ul class="list lowerAlpha">
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+        <ul class="list upperLatin">
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+        <ul class="list upperAlpha">
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+        <ul class="list cjkIdeographic">
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+        <ul class="list hiragana">
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+        <ul class="list katakana">
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+        <ul class="list hiraganaIroha">
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+        <ul class="list katakanaIroha">
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+        <ul class="list hebrew">
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+        <ul class="list armenian">
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+        <ul class="list georgian">
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+        <ul class="userList">
+            <li>
+                <p class="thumbnail"><img src="" alt=""/></p>
+                <div class="details"></div>
+            </li>
+            <li></li>
+            <li></li>
+        </ul>
+
+        <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ol>
 
         <div id="primary" class="content-area">
             <div id="content" class="site-content" role="main">
