--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -2,20 +2,43 @@
 <section id="top">
     <div class="container">
 
-        <h2>ボタン</h2>
-        <p class="btn"><a href="">button</a></p>
-        <p class="btn primary"><a href="">button</a></p>
-        <p class="btn green"><a href="">button</a></p>
-        <p class="btn orange"><a href="">button</a></p>
-        <p class="btn primary"><a href="">button</a></p>
-
-        <p class="btn primary"><button>ボタン</button></p>
-        <p class="btn primary"><input type="submit" value="ボタン"/></p>
+        <h2>ボタン (Wrap Style)</h2>
+        <p class="btn"><a href="">Button</a></p>
+        <p class="btn primary"><a href="">Button</a></p>
+        <p class="btn secondly"><a href="">Button</a></p>
+        <p class="btn green"><a href="">Button</a></p>
+        <p class="btn orange"><a href="">Button</a></p>
+        <p class="btn red"><a href="">Button</a></p>
 
 
-        <button class="btn primary">ボタン</button>
+        <h3>button Element</h3>
+        <p class="btn"><button>Button</button></p>
+        <p class="btn primary"><button>Button</button></p>
+        <p class="btn secondly"><button>Button</button></p>
+        <p class="btn green"><button>Button</button></p>
+        <p class="btn orange"><button>Button</button></p>
+        <p class="btn red"><button>Button</button></p>
+
+        <h3>input Element</h3>
+        <p class="btn"><input type="submit" value="Button"/></p>
+        <p class="btn primary"><input type="submit" value="Button"/></p>
+        <p class="btn secondly"><input type="submit" value="Button"/></p>
+        <p class="btn green"><input type="submit" value="Button"/></p>
+        <p class="btn orange"><input type="submit" value="Button"/></p>
+        <p class="btn red"><input type="submit" value="Button"/></p>
+
+        <h2>ボタン (Style)</h2>
+        <a class="btn" href="">Button</a>
+        <button class="btn primary" value="ボタン"></button>
         <input class="btn primary" type="submit" value="ボタン"/>
 
+        <h2>タイトル</h2>
+
+        <h1>h1 Title</h1>
+        <h2>h2 Title</h2>
+        <h3>h3 Title</h3>
+        <h4>h4 Title</h4>
+        <h5>h5 Title</h5>
 
         <h2>アイコン</h2>
         <p class="icon"></p>
@@ -34,7 +57,7 @@
         <p class="text"></p>
         <p class="text"></p>
         <p class="text"></p>
-        <p class="text"></p>
+        <p class="text link"></p>
         <p class="text copy"></p>
 
         <h2>ボックス</h2>
