--- a/docs/layouts/partials/footer.html
+++ b/docs/layouts/partials/footer.html
@@ -1,8 +1,6 @@
-<footer>
+<footer class="footer">
     <div class="wrap">
-        <p class="text copy">
-            &copy; Atomic Package
-        </p>
+        <p class="text copy">&copy; Atomic Package</p>
     </div>
 </footer>
 </body>
