--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -41,6 +41,26 @@
         <h5 class="title">h5 Title</h5>
         <h6 class="title">h6 Title</h6>
 
+        <h2>メニュー</h2>
+
+        <nav class="menu">
+            <ul class="menuList">
+                <li>
+                    <a href="">Home</a>
+                </li>
+                <li>
+                    <a href="">Pages</a>
+                </li>
+                <li>
+                    <a href="">Pages</a>
+                </li>
+                <li>
+                    <a href="">Pages</a>
+                </li>
+            </ul>
+        </nav>
+
+
         <h2>アイコン</h2>
         <p class="icon"></p>
         <p class="icon"></p>
