--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -81,6 +81,10 @@
         <p class="text link"></p>
         <p class="text copy"></p>
 
+        <h2>サムネイル</h2>
+        
+        <p class="thumbnail"><img src="" alt=""/></p>
+
         <h2>ボックス</h2>
         <div class="box"></div>
         <div class="box"></div>
