--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -60,6 +60,45 @@
             </ul>
         </nav>
 
+        <nav class="pagination">
+            <ul class="paginationList">
+                <li class="prev">
+                    <a href=""></a>
+                </li>
+                <li>
+                    <a href="">1</a>
+                </li>
+                <li>
+                    <a href="">2</a>
+                </li>
+                <li>
+                    <a href="">3</a>
+                </li>
+                <li>
+                    <a href="">4</a>
+                </li>
+                <li class="next">
+                    <a href=""></a>
+                </li>
+            </ul>
+        </nav>
+
+        <nav class="tab">
+            <ul class="tabList">
+                <li>
+                    <a href="">Home</a>
+                </li>
+                <li>
+                    <a href="">Pages</a>
+                </li>
+                <li>
+                    <a href="">Pages</a>
+                </li>
+                <li>
+                    <a href="">Pages</a>
+                </li>
+            </ul>
+        </nav>
 
         <h2>アイコン</h2>
         <p class="icon"></p>
@@ -96,6 +135,10 @@
             <div class="details"></div>
         </div>
 
+        <div class="searchBox">
+            <p class="input"><input type="search"/></p>
+            <p class="btn"><a href="">検索</a></p>
+        </div>
 
         <h2>フォーム</h2>
         <p class="input"><input type="text" value="テキスト"/></p>
