--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -337,6 +337,22 @@
             <li></li>
         </ol>
 
+        <h2>テーブル</h2>
+        <table class="table">
+
+        </table>
+
+
+        <table class="table striped">
+
+        </table>
+
+        <table class="table bordered">
+
+        </table>
+
+        
+
         <div id="primary" class="content-area">
             <div id="content" class="site-content" role="main">
 
