--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -185,15 +185,15 @@
 
 
         <ul class="list disc">
-            <li>ああああ</li>
-            <li>ああああ</li>
-            <li>ああああ</li>
+            <li>List disc</li>
+            <li>List disc</li>
+            <li>List disc</li>
         </ul>
 
         <ul class="list circle">
-            <li>ああああ</li>
-            <li>ああああ</li>
-            <li>ああああ</li>
+            <li>List circle</li>
+            <li>List circle</li>
+            <li>List circle</li>
         </ul>
 
         <ul class="list square">
@@ -351,7 +351,7 @@
 
         </table>
 
-        
+
 
         <div id="primary" class="content-area">
             <div id="content" class="site-content" role="main">
