--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -306,7 +306,7 @@
 
         <ul class="thumbnailList">
             <li>
-                <p class="thumbnail"><img src="" alt=""/></p>
+                <p class="thumbnail"><img src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama" /></p>
                 <div class="details"></div>
             </li>
             <li></li>
@@ -315,7 +315,7 @@
 
         <ul class="thumbnailList user">
             <li>
-                <p class="thumbnail"><img src="" alt=""/></p>
+                <p class="thumbnail"><img src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama" /></p>
                 <div class="details"></div>
             </li>
             <li></li>
