--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -137,6 +137,12 @@
         <h2>サムネイル</h2>
         
         <p class="thumbnail"><img src="" alt=""/></p>
+        <p class="thumbnail round"><img src="" alt=""/></p>
+        <p class="thumbnail circle"><img src="" alt=""/></p>
+
+        <img class="thumbnail" src="" alt=""/>
+        <img class="thumbnail round" src="" alt=""/>
+        <img class="thumbnail circle" src="" alt=""/>
 
         <h2>ボックス</h2>
         <div class="box"></div>
