add thumbnail frame

--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -139,10 +139,12 @@
         <p class="thumbnail"><img src="" alt=""/></p>
         <p class="thumbnail round"><img src="" alt=""/></p>
         <p class="thumbnail circle"><img src="" alt=""/></p>
+        <p class="thumbnail frame"><img src="" alt=""/></p>
 
         <img class="thumbnail" src="" alt=""/>
         <img class="thumbnail round" src="" alt=""/>
         <img class="thumbnail circle" src="" alt=""/>
+        <img class="thumbnail frame" src="" alt=""/>
 
         <h2>ボックス</h2>
         <div class="box"></div>
