--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -136,21 +136,26 @@
 
         <h2>サムネイル</h2>
         
-        <p class="thumbnail"><img src="" alt=""/></p>
-        <p class="thumbnail round"><img src="" alt=""/></p>
-        <p class="thumbnail circle"><img src="" alt=""/></p>
-        <p class="thumbnail frame"><img src="" alt=""/></p>
+        <p class="thumbnail"><img src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama"/></p>
+        <p class="thumbnail round"><img src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama"/></p>
+        <p class="thumbnail circle"><img src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama"/></p>
+        <p class="thumbnail frame"><img src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama"/></p>
 
-        <img class="thumbnail" src="" alt=""/>
-        <img class="thumbnail round" src="" alt=""/>
-        <img class="thumbnail circle" src="" alt=""/>
-        <img class="thumbnail frame" src="" alt=""/>
+        <img class="thumbnail" src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama"/>
+        <img class="thumbnail round" src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama"/>
+        <img class="thumbnail circle" src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama"/>
+        <img class="thumbnail frame" src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama"/>
 
         <h2>ボックス</h2>
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
 
+
+        <div class="thumbnailBox">
+            <p class="thumbnail"><img src="" alt=""/></p>
+            <div class="details"></div>
+        </div>
 
         <div class="userBox">
             <p class="thumbnail"><img src="" alt=""/></p>
@@ -314,10 +319,16 @@
 
         <ul class="thumbnailList">
             <li>
-                <p class="thumbnail"><img src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama" /></p>
+                <p class="thumbnail round"><img src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama" /></p>
                 <div class="details"></div>
             </li>
-            <li></li>
+            <li>
+                <div class="thumbnailBox">
+                    <p class="thumbnail round"><img src="img/thumbnail_01.jpg" width="45" alt="daisuke takayama" /></p>
+                    <div class="details"></div>
+                </div>
+                <div class="details"></div>
+            </li>
             <li></li>
         </ul>
 
