--- a/scss/atomic-package/base/_setting.scss
+++ b/scss/atomic-package/base/_setting.scss
@@ -7,4 +7,6 @@ $colorAqua: #0ff;
 $fontfamily: arial, "Hiragino Kaku Gothic Pro", sans-serif;
 $fontColorAqua: #0ff;
 
+$thumbnailWidth: 45px;
+
 $mediaQueriesPoint1: 414px;
