--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -60,6 +60,9 @@
             </ul>
         </nav>
 
+
+        <h3>ページネーション</h3>
+
         <nav class="pagination">
             <ul class="paginationList">
                 <li class="prev">
@@ -82,6 +85,8 @@
                 </li>
             </ul>
         </nav>
+
+        <h3>タブメニュー</h3>
 
         <nav class="tab">
             <ul class="tabList">
@@ -128,11 +133,11 @@
 
         <h2>テキスト</h2>
         <p class="text">テキスト</p>
-        <p class="text"></p>
-        <p class="text"></p>
-        <p class="text"></p>
-        <p class="text link"></p>
-        <p class="text copy"></p>
+        <p class="text">テキストテキストテキストテキストテキストテキスト</p>
+        <p class="text">テキストテキストテキストテキストテキスト</p>
+        <p class="text">テキストテキストテキストテキストテキスト</p>
+        <p class="text link"><a href="">テキストテキスト</a></p>
+        <p class="text copy">コピーライト</p>
 
         <h2>サムネイル</h2>
         
