add header footer

--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -178,6 +178,11 @@
         <p class="input"><input type="search"/></p>
         <p class="input"><input type="radio"/></p>
 
+        <input type="text" value="テキスト"/><
+        <input type="checkbox"/><
+        <input type="search"/><
+        <input type="radio"/><
+
         <p class="input">
             <select name="" id="">
                 <option value="">1</option>
@@ -376,6 +381,17 @@
         </table>
 
 
+
+        <h2>ヘッダー</h2>
+        <header class="header">
+            <p class="logo main"></p>
+        </header>
+
+
+        <h2>フッター</h2>
+        <footer class="footer">
+
+        </footer>
 
         <div id="primary" class="content-area">
             <div id="content" class="site-content" role="main">
