add fontawesome style

--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -381,6 +381,25 @@
         </table>
 
 
+        <h2>アイコン</h2>
+        <p class="icon ap-glass"></p>
+        <p class="icon ap-music"></p>
+        <p class="icon ap-search"></p>
+        <p class="icon ap-envelope-o"></p>
+        <p class="icon ap-heart"></p>
+        <p class="icon ap-star"></p>
+        <p class="icon ap-star-o"></p>
+        <p class="icon ap-user"></p>
+
+        <p class="icon ap-film"></p>
+        <p class="icon ap-th-large"></p>
+        <p class="icon ap-th"></p>
+        <p class="icon ap-th-list"></p>
+        <p class="icon ap-check"></p>
+        <p class="icon ap-remove"></p>
+        <p class="icon ap-close"></p>
+        <p class="icon ap-times"></p>
+
 
         <h2>ヘッダー</h2>
         <header class="header">
