--- a/scss/atomic-package/base/_setting.scss
+++ b/scss/atomic-package/base/_setting.scss
@@ -1,6 +1,7 @@
 $baseWidth: 1000px;
 $baseBgColor: #fff;
 $imgPath: "../img/ui/";
+$fontPath: "../img/fonts/";
 
 $colorAqua: #0ff;
 
@@ -10,3 +11,12 @@ $fontColorAqua: #0ff;
 $thumbnailWidth: 45px;
 
 $mediaQueriesPoint1: 414px;
+
+@font-face {
+  font-family: 'FontAwesome';
+  src: url("#{$fontPath}/fontawesome-webfont.woff2") format('woff2'),
+  url("#{$fontPath}/fontawesome-webfont.woff") format("woff"),
+  url("#{$fontPath}/fontawesome-webfont.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
